--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "mercadopago": "^1.5.16",
     "pg": "^8.11.0"
   },
   "devDependencies": {
